--- a/templates/index.html
+++ b/templates/index.html
@@ -16,3 +16,13 @@ Add a book:
 </form>
 
 {% end %}
+
+{% block content %}
+<div id="content" class="pop-out">
+	<div class="wrapper home">
+		<h1>Rate books <span class="amp">&amp;</span> get book recommendations.</h1>
+		<p>Bookfish makes it that easy.</p>
+		<p class="wide-margin"><a class="fancy-button rounded-corners half-width center-block" href="signup/">Get started!</a></p>
+	</div>
+</div>
+{% end %}
