Top 10 list works. Detail pages exist.
The top ten page should world, but it's kind of difficult to test since
right now we aren't in any way changing the ratings of books. Book
detail pages have some infrastructure in place; now we just need to
display meaningful information, comments, etc.

Add run script to run the server.

Turn tabs into spaces in db.py.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block body %}
+{% block nonexistant %}
 <p> This is the body.</p>
 
 <ol>
@@ -21,8 +21,12 @@ Add a book:
 <div id="content" class="pop-out">
 	<div class="wrapper home">
 		<h1>Rate books <span class="amp">&amp;</span> get book recommendations.</h1>
-		<p>Bookfish makes it that easy.</p>
-		<p class="wide-margin"><a class="fancy-button rounded-corners half-width center-block" href="signup/">Get started!</a></p>
+		<form method="post" action="signup/" name="new_user_form">
+			<!-- <p>Bookfish makes it that easy.</p> -->
+			<p> <label for="username">Name:</label> <input id="username" class="in-form">	</p>
+			<p> <label for="password">Password:</label> <input type="password" class="in-form" id="password"> </p>
+			<p class="wide-margin"><a class="fancy-button rounded-corners half-width center-block" href="#" onclick="document.new_user_form.submit()">Get started!</a></p>
+		</form>
 	</div>
 </div>
 {% end %}
