--- a/templates/book_in_list.html
+++ b/templates/book_in_list.html
@@ -2,5 +2,10 @@
 
 <li>
   <img class="left" src="http://ecx.images-amazon.com/images/I/51ynI7I-qnL._AA115_.jpg"/>
-  <h2><a href="{{ book.get_url() }}">{{ book.name }}</a></h2> {{ book.rating }}/5 by {{ book.author }}. Rate: [1] [2] [3] [4] [5]
+  <h2><a href="{{ book.get_url() }}">{{ book.name }}</a></h2> {{ book.rating }}/5 by {{ book.author }}. 
+  
+  Rate: 
+  {% for x in [y / 2.0 for y in range(0, 10)] %}
+    <a href="{{ book.get_rating_url(x) }}">{{ x }}</a>
+  {% end %}
 </li>
