--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-  Sup, {{ current_user.first_name() }}? This is your profile page.
+  Sup, {{ current_user.first_name() }}? 
+
+  {% if your_profile %}
+    This is your profile page.
+  {% else %}
+    This is {{ profile_user.first_name() }}'s profile page.
+  {% end %}
+
+  {{ user = profile_user }}
+
+  {% for rating in ratings %}
+    {% include "rating_in_list.html" %}
+  {% end %}
 {% end %}
