--- a/templates/rating_in_list.html
+++ b/templates/rating_in_list.html
@@ -1,3 +1,3 @@
 <li>
-  <h4>{{ user.first_name() }} rated {{ rating.book_name }} a {{ rating.value }}.</h4> 
+  <h4>{{ user.first_name() }} rated {{ rating.book_name() }} a {{ rating.value }}.</h4> 
 </li>
