--- a/public/css/page.css
+++ b/public/css/page.css
@@ -74,11 +74,6 @@ html, body {
     font-weight: normal;
 }
 
-#content h1 {
-    margin-top: 2em;
-    font-size: 1.25em;
-}
-
 #content ol.thin {
     padding: 0;
     margin: 1em auto;
@@ -105,7 +100,6 @@ html, body {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1em;
     font-size: 2em;
 }
 
@@ -184,24 +178,24 @@ a.fancy-button {
  * Lists
  */
 
-ol.big-list {
+#content ol.big-list {
     padding-left: 200px;
     position: relative;
 }
 
-ol.big-list li {
-    padding: 1.143em 0;
-    font-size: .875em;
-    line-height: 1.143em;
+#content ol.big-list li {
+    font-family: "Helvetica Neue", sans-serif;
+    padding: 1.5em 0;
+    font-size: 1.3125em;
+    line-height: 1.5em;
 }
 
-ol.big-list li img {
+#content ol.big-list li img {
     position: absolute;
-    top: 10px;
     left: 10px;
 }
 
-ol.big-list li a.label {
+#content ol.big-list li a.label {
     padding: .25em 1em;
     margin: 0 1em;
     background: #fcfac9;
@@ -209,29 +203,35 @@ ol.big-list li a.label {
     text-decoration: none;
 }
 
-ol.big-list li a.label:hover {
+#content ol.big-list li a.label:hover {
     background: #FCE6C9;
     color: #444;
 }
 
-ol.big-list li h2 {
+#content ol.big-list li h2 {
     margin: 0;
+    line-height: 1.7em;
+    font-size: 1.2em;
 }
 
-ol.big-list li h2 a {
-    font: 1em "Helvetica Neue", sans-serif;
+#content ol.big-list li h2 a {
+    font-family: "Helvetica Neue", sans-serif;
     text-decoration: none;
     color: #48c;
     font-weight: bold;
     letter-spacing: -1px;
 }
 
-ol.big-list li h2 a:hover {
+#content ol.big-list li h2 a:hover {
     color: #7bf;
 }
 
-ol.big-list li h2 a:visited {
+#content ol.big-list li h2 a:visited {
     color: #bb5faf;
+}
+
+#content ol.big-list li p {
+    font: .666em "Lucida Sans", Lucida, "Helvetica Neue", sans-serif;
 }
 
 /**
