--- a/templates/browse-books.html
+++ b/templates/browse-books.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2> Browsing books. </h2>
-
-  {% for book in books %}
-    {% include "book_in_list.html" %}
-  {% end %}
+<div id="content">
+	<div class="wrapper">
+		<h1>Browsing books</h1>
+		<ol class="big-list">
+            {% for book in books %}
+                {% include "book_in_list.html" %}
+            {% end %}
+		</ol>
+	</div>
+</div>
 {% end %}
