--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1,17 +1,23 @@
- @import url(http://fonts.googleapis.com/css?family=Amaranth&v1);
+@import url(http://fonts.googleapis.com/css?family=Amaranth&v1);
+
+html {
+  overflow-y: scroll;
+}
 
 html, body {
     margin: 0;
     padding: 0;
     font: 100% "Lucida Sans", Lucida, "Helvetica Neue", sans-serif;
     color: #333;
+    background: #FAF8F0;
 }
 /**
  * 10. Navigation.
  */
 #nav .wrapper {
     width: 49em;
-    margin: 1em auto;
+    margin: 0 auto;
+    padding: 1em 0;
 }
 
 #nav .wrapper .logo {
@@ -64,6 +70,11 @@ html, body {
 /**
  * 20. Content
  */
+#content {
+    background: #fff;
+    border-top: .25em solid #EEDED4;
+    border-bottom: .25em solid #EEDED4;
+}
 #content .wrapper {
     width: 49em;
     margin: 1em auto;
@@ -103,8 +114,12 @@ html, body {
     font-size: 2em;
 }
 
-.pop-out .home {
-    padding-bottom: 1em;
+#content .home input {
+  font: 1.5em "Lucida Sans", Lucida, "Helvetica Neue", sans-serif;
+  padding: .25em .5em;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
 }
 
 /**
@@ -124,6 +139,11 @@ html, body {
  */
 
 /** Fancy button. */
+.home .fancy-button {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
 .fancy-button {
     box-shadow: 0 3px #A68729;
     background: #FFED75;
@@ -155,6 +175,8 @@ a.fancy-button {
     box-shadow: 0 3px #467CC2;
     border-color: #B3D2FF;
     text-shadow: 0 1px 0 #cef;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
     
     background: #99eaff; /* Old browsers */
     background: -moz-linear-gradient(top, #99eaff 0%, #75a3ff 100%); /* FF3.6+ */
@@ -188,11 +210,13 @@ a.fancy-button {
     padding: 1.5em 0;
     font-size: 1.3125em;
     line-height: 1.5em;
+    position: relative;
 }
 
-#content ol.big-list li img {
+#content ol.big-list img {
     position: absolute;
     left: 10px;
+    margin: 1.5em;
 }
 
 #content ol.big-list li a.label {
@@ -232,6 +256,7 @@ a.fancy-button {
 
 #content ol.big-list li p {
     font: .666em "Lucida Sans", Lucida, "Helvetica Neue", sans-serif;
+    margin-top: 0;
 }
 
 /**
@@ -290,12 +315,6 @@ a.fancy-button {
 .center-block {
     margin-left: auto;
     margin-right: auto;
-}
-
-.pop-out {
-    background: #eef3ff;
-    border-top: .25em solid #d4ddee;
-    border-bottom: .25em solid #d4ddee;
 }
 
 /**
