--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,11 @@
             </ul>
         </div>
     </div>
-    {% block content %}{% end %}
+    <div id="content">
+      <div class="wrapper">
+        {% block content %}{% end %}
+      </div>
+    </div>
     <div id="footer">
         <div class="wrapper thirds clearfix">
             <div class="third">
